--- a/order_wsgi/requirements.txt
+++ b/order_wsgi/requirements.txt
@@ -1,7 +1,13 @@
 async-timeout==4.0.3
+boto3==1.28.57
+botocore==1.31.57
 colorama==0.4.6
 iniconfig==2.0.0
+jmespath==1.0.1
 packaging==23.1
 pluggy==1.2.0
-pytest==7.4.0
+python-dateutil==2.8.2
 redis==5.0.0
+s3transfer==0.7.0
+six==1.16.0
+urllib3==1.26.16
