added docker compose

--- a/order_processor/Dockerfile
+++ b/order_processor/Dockerfile
@@ -6,22 +6,20 @@ RUN mkdir /app
 # making directory for the credentials
 RUN mkdir -p /root/.aws
 
-# make aws config 
-RUN cat > /root/.aws/config <<EOF
-[default]
-region = us-east-1
-EOF
-
 # copying requirements first to cache this layer
 COPY requirements.txt /app/requirements.txt
 RUN pip3 install -r /app/requirements.txt
+
+# make aws config 
+RUN echo '[default]' > /root/.aws/config
+RUN echo 'region = us-east-1' >> /root/.aws/config
 
 # copy the rest of the app
 COPY . /app
 
 #starting the app
 WORKDIR /app
-ENTRYPOINT [ "python3", "-m", "order_wsgi.main"]
+ENTRYPOINT [ "python3", "-um", "order_processor.main"]
 
 # default parameters for the app
 CMD ["localhost:8080", "localhost:6379"]
